changes to clone website lab

--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
             <div class="col-1">contact</div>
         </section>
     </header>
-    <section class=" container-fluid syrup-img">
-            <h2 class="col-4 text-light">Crown Maple</h2>
-            <p class="col-4 text-light">Not all crowns are created equal, you loser</p>
+    <section class=" container-fluid ">
+        <section class="row syrup-img">
+            <div class="col-12">
+                <h2 class=" text-light mb-0">Crown Maple</h2>
+                <p class="text-light mb-0">Not all crowns are created equal, you loser</p>
+            </div>
+        </section>
     </section>
     <section class="container-fluid text-center bg-teal">
         <div class="row">
-            <p class="col-12">We are artists who specialize in branding and packaging design. We help brands present
+            <p class="col-12 py-5 bg-success">We are artists who specialize in branding and packaging design. We help brands present
                 their stories in ways
                 that are effective and honest, novel and established.
                 <button>
